--- a/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
+++ b/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf768c">  <td>19/04/29 22:51:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1638215613</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/04/29 22:50:19</td>   <td>-44326</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1638215613</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/04/29 22:50:39</td>   <td>-24529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">SearchPatientAddMedication</td> 
-  <td>main@1638215613</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/04/30 16:29:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_05.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@44e81672]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/04/30 16:26:52</td>   <td>-157068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@44e81672]">LoginAndLogout</td> 
+  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/04/30 16:28:12</td>   <td>-77590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@44e81672]">LoginAndLogout</td> 
+  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/04/30 16:26:31</td>   <td>-178410</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_05.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@44e81672]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146848448</td>   <td></td> </tr>
 </table>
