--- a/NemoRx1/test-output/old/Suite/classes.html
+++ b/NemoRx1/test-output/old/Suite/classes.html
@@ -71,7 +71,37 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginAndLogout</td>
+<td>LoginAndLogout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Open</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Close</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.NemoRx.TestScripts.TestScript_05</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>RxPrintSettingsValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
