--- a/NemoRx1/test-output/old/Suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Suite/reporter-output.html
@@ -27,8 +27,6 @@
 <tr><td>Audit items link from side menu succesfully opened</td></tr>
 <tr><td>Grant request link from side succesfully opened</td></tr>
 <tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
 <tr><td>View/Export Signed Prescriptions link from side menu opened Succesfully</td></tr>
 <tr><td>Working hours link from side menu succesfully opened</td></tr>
 <tr><td>Logout Successfully completed</td></tr>
@@ -37,8 +35,6 @@
 <tr><td>Audit items link from side menu succesfully opened</td></tr>
 <tr><td>Grant request link from side succesfully opened</td></tr>
 <tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
 <tr><td>View/Export Signed Prescriptions link from side menu opened Succesfully</td></tr>
 <tr><td>Working hours link from side menu succesfully opened</td></tr>
 <tr><td>Logout Successfully completed</td></tr>
@@ -46,8 +42,6 @@
 <tr><td>Page Title-NEMORx</td></tr>
 <tr><td>Audit items link from side menu succesfully opened</td></tr>
 <tr><td>Grant request link from side succesfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
 <tr><td>Profile Link From Side Menu Successfully opened</td></tr>
 <tr><td>View/Export Signed Prescriptions link from side menu opened Succesfully</td></tr>
 <tr><td>Working hours link from side menu succesfully opened</td></tr>
@@ -55,4 +49,40 @@
 <tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
 <tr><td>Page 2 Title==NEMORx</td></tr>
+<tr><td>Name of patient==rathnaa</td></tr>
+<tr><td>Page 3 Title==NEMORx</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Capitalize Prescription</td></tr>
+<tr><td>Print Patient's Address</td></tr>
+<tr><td>Two Signature Lines</td></tr>
+<tr><td>Initials Signature Line</td></tr>
+<tr><td>Print Title</td></tr>
+<tr><td>Print DPS</td></tr>
+<tr><td>Print NPI</td></tr>
+<tr><td>Print State License Number</td></tr>
+<tr><td>Print Comments</td></tr>
+<tr><td>Unchecked Capitalize Prescription</td></tr>
+<tr><td>Unchecked Initials Signature Line</td></tr>
+<tr><td>Unchecked Print DPS</td></tr>
+<tr><td>Unchecked Print Comments</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Capitalize Prescription</td></tr>
+<tr><td>Print Patient's Address</td></tr>
+<tr><td>Two Signature Lines</td></tr>
+<tr><td>Initials Signature Line</td></tr>
+<tr><td>Print Title</td></tr>
+<tr><td>Print DPS</td></tr>
+<tr><td>Print NPI</td></tr>
+<tr><td>Print State License Number</td></tr>
+<tr><td>Print Comments</td></tr>
+<tr><td>Unchecked Capitalize Prescription</td></tr>
+<tr><td>Unchecked Initials Signature Line</td></tr>
+<tr><td>Unchecked Print DPS</td></tr>
+<tr><td>Unchecked Print Comments</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
 </table>
