--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,13 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Name of patient==YBLKXSZI</td></tr>
+<tr><td>Account Number-81234511</td></tr>
+<tr><td>FirstName-UICRIQC</td></tr>
+<tr><td>Date of Birth-05/071964</td></tr>
+<tr><td>**Patient Added Successfully-Name Of the Patient--UICRIQC UICRIQC</td></tr>
+<tr><td>Name of patient==UICRIQC</td></tr>
+<tr><td>Search for added patient</td></tr>
 <tr><td>Drug Selected</td></tr>
 <tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
 <tr><td>Successfully created allergy. Would you like to add another allergy?</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
 </table>
